# test-forge

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/: copilot_instructions.md
.github/workflows/: build.yaml  tests.yaml
app/: actions.py  api.py  app.py  cli.py  config.py  dependencies.py  documents.py  exceptions.py  models.py  mongo.py  qdrant_config.py  s3_config.py  schemas.py
tests/: categories.csv  conftest.py  delete_tests.py  get_tests.py  products.csv  test_config.py  update_tests.py  upload_tests.py
